# Simple-Task-Manager

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
config/: migrations.py  settings.py  utils.py
tasks/: abstract_managers.py  endpoints.py  managers.py  models.py
users/: abstract_managers.py  auth.py  endpoints.py  managers.py  models.py
